display result images in block to prevent jumpy loading

--- a/app/spa/src/style.scss
+++ b/app/spa/src/style.scss
@@ -369,6 +369,7 @@ a {
 		max-height: 100%;
 		margin-right: $margin;
     border-radius: $margin;
+    display: inline-block;
 	}
 
 	.justified-row img:last-child {
